--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,12 @@
 fastapi
 uvicorn
 python-multipart
+pydantic
+pydantic-settings
+google-generativeai
+openai
+pinecone-client
+chromadb
+sentence-transformers
+PyMuPDF
+python-docx
